--- a/addons/point_of_sale/static/src/css/pos.css
+++ b/addons/point_of_sale/static/src/css/pos.css
@@ -80,7 +80,7 @@ td {
 .pos {
     padding: 0;
     margin: 0;
-    background-color: #f0eeee;
+    background-color: #FAFAFA;
     font-family: "Lato","Lucida Grande", Helvetica, Verdana, Arial;
     color: #555555;
     font-size: 12px;
@@ -262,7 +262,7 @@ td {
     margin:0;
     padding:0;
     color: gray;
-    background: #393939;
+    background: #F57D4B;
 }
 
 /*  a) The left part of the top-bar */
@@ -276,20 +276,20 @@ td {
     height:100%;
     margin:0;
     padding:0;
-    border-right: 1px solid #373737;
+    border-right: 1px solid rgba(0,0,0,0.12);
     text-align:left;
     line-height:100%;
     vertical-align: middle;
 }
 .pos .pos-logo {
-    height: 35px;
-    margin-left: 7px;
-    margin-top: 2px;
-    vertical-align:middle;
+    height: 25px;
+    margin-left: 16px;
+    margin-top: 12px;
+    vertical-align: middle;
 } 
 .pos .pos-branding .username{
     float:right;
-    color:#DDD;
+    color:rgba(0,0,0,0.26);
     font-size:16px;
     margin-right:32px;
     line-height: 48px;
@@ -317,7 +317,7 @@ td {
     margin-bottom: 0px;
     margin-right: 2px;
     padding-top: 0px;
-    background: #8b8b8b;
+    background: rgba(0,0,0,0.26);
     border-top-left-radius: 3px;
     border-top-right-radius: 3px;
     vertical-align: top;
@@ -354,8 +354,8 @@ td {
 
 .pos .order-button.square{
     margin-left:1px;
-    background: #5c5c5c;
-    color: rgb(160,160,160);
+    background: rgba(0,0,0,0.54);
+    color: rgb(254,254,254);
     font-size: 18px;
     line-height: 45px;
 }
@@ -390,9 +390,9 @@ td {
     height: 48px;
     padding-left: 16px;
     padding-right: 16px;
-    border-right: 1px solid #292929;
-    border-left: 1px solid #292929;
-    color: #DDD;
+    border-right: 1px solid rgba(0,0,0,0.12);
+    border-left: 1px solid rgba(0,0,0,0.12);
+    color: rgba(0,0,0,0.54);
     line-height: 48px;
     text-align: center;
     cursor: pointer;
@@ -448,6 +448,12 @@ td {
     color: rgb(239, 153, 65);
 }
 
+.pos .oe_status .oe_white,
+.pos .oe_icon.oe_white{
+    color: rgb(254,254,254,1);
+
+}
+
 /*  ********* Contains everything below the  bar ********* */
 
 .pos .pos-content {
@@ -455,7 +461,7 @@ td {
     position: absolute;
     top: 48px;
     bottom: 0;
-    background: #F0EEEE;
+    background: #FAFAFA;
 }
 
 /*  ********* The leftpane contains the order, numpad and paypad ********* */
@@ -473,7 +479,7 @@ td {
     border-right: solid 1px #CECBCB;
 }
 .pos .pos-leftpane .pads {
-    background: #F0EEEE;
+    background: #FAFAFA;
     white-space: nowrap;
 }
 /*  ********* The control buttons ********* */
@@ -545,7 +551,7 @@ td {
 .pos .popup  button:active{
     border: none;
     color: white;
-    background: #7f82ac;
+    background: #4DBFA0;
 }
 
 /*  ********* The Numpad ********* */
@@ -651,7 +657,9 @@ td {
 }
 .pos .breadcrumb-homeimg {
     width: 27px;
-    margin: 12px 6px;
+    margin: 10px 0px 5px 6px;
+    font-size: 24px;
+    line-height: 30px;
 }
 
 /*  b) the search box */
@@ -799,8 +807,8 @@ td {
     width: 120px;
     height:120px;
     background:#fff;
-    border: 1px solid #e2e2e2;
-    border-radius: 3px;
+    border: 1px solid rgba(0,0,0,0.12);
+    border-radius: 4px;
     border-bottom-width: 3px;
     overflow: hidden;
     cursor: pointer;
@@ -827,7 +835,7 @@ td {
     vertical-align: top;
     color: white;
     line-height: 13px;
-    background: #7f82ac;
+    background: #4DBFA0;
     padding: 2px 5px;
     border-radius: 2px;
 }
@@ -1048,9 +1056,10 @@ td {
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     position: absolute;
-    bottom: 10px;
+    bottom: 6px;
     left: 8px;
     cursor: pointer;
+    opacity: 0.26;
 }
 
 .pos .pos-payment-container .left-block{
@@ -1381,7 +1390,7 @@ td {
     top: 0px;
     width:100%;
     height: 100%;
-    background: #F0EEEE;
+    background: #FAFAFA;
 }
 
 .pos .order-scroller{
@@ -1497,7 +1506,7 @@ td {
 }
 
 .pos .order .orderline.selected{
-    background: rgba(140,143,183,0.2);
+    background: rgba(77, 191, 160, 0.1);
     -webkit-transition: background 250ms ease-in-out;
        -moz-transition: background 250ms ease-in-out;
             transition: background 250ms ease-in-out;
@@ -1617,8 +1626,8 @@ td {
 }
 .pos .pos-actionbar .button:active{
     color: white;
-    background: #7f82ac;
-    border: 1px solid #7f82ac;
+    background: #4DBFA0;
+    border: 1px solid rgba(0,0,0,0.12);
 
     -webkit-transition-property: background, border;
     -webkit-transition-duration: 0.2s;
@@ -1742,7 +1751,7 @@ td {
     text-align:center;
     font-size:20px;
     font-weight:bold;
-    background-color: #F0EEEE;
+    background-color: #FAFAFA;
     border-radius: 3px;
     box-shadow: 0px 10px 20px rgba(0,0,0,0.4);
     z-index:1200;
@@ -1792,8 +1801,8 @@ td {
 }
 .pos .popup .button:active{
     color: white;
-    background: #7f82ac;
-    border: 1px solid #7f82ac;
+    background: #4DBFA0;
+    border: 1px solid rgba(0,0,0,0.12);
 
     -webkit-transition-property: background, border;
     -webkit-transition-duration: 0.2s;
@@ -1825,11 +1834,10 @@ td {
     height: 10px;
 }
 .pos *::-webkit-scrollbar-track{
-    background: rgb(224,224,224);
-    border-left: solid 1px rgb(200,200,200);
+    background: rgba(0,0,0,0.06);
 }
 .pos *::-webkit-scrollbar-thumb{
-    background: rgb(168,168,168);
+    background: rgba(0,0,0,0.26);
     min-height: 30px;
 }
 
@@ -1880,4 +1888,37 @@ td {
 }
 .pos .not-supported-browser img{
     border-collapse: separate;
+}
+
+.pos .pdm_login{
+    margin-top: 50px;
+}
+.pos .pdm_login__input
+{
+    font-size: 32px;
+    line-height: 40px;
+    margin: 18px 6px;
+    width: 340px;
+    padding: 4px;
+    border-radius: 4px;
+    border: solid 1px rgba(0,0,0,0.12);
+    margin-bottom: 4px;
+    background: white;
+    font-family: "Lato","Lucida Grande", Helvetica, Verdana, Arial;
+    color: rgba(0,0,0,0.87);
+    box-sizing: border-box;
+    letter-spacing: 1px;
+}
+
+.pos .pdm_login__input:focus{
+    outline: none;
+}
+.pos .pdm_login-error {
+    display: block;
+    font-size: 14px;
+    text-align: left;
+    width: 200px;
+    margin-left: 120px;
+    color: #DE5865;
+    line-height: 20px;
 }
