--- a/addons/web/views/database_manager.html
+++ b/addons/web/views/database_manager.html
@@ -102,7 +102,7 @@
                         </div>
 
                         <div class="oe_footer">
-                            Powered by <a href="http://www.odoo.com" target="_blank"><span>Odoo</span></a>
+                            Powered by <a href="http://www.pademobile.com" target="_blank"><span>Pademobile</span></a>
                         </div>
                     </div>
                 </td>
